# acoustic-echo-cancellation

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
include/acoustic-echo-cancellation/: aec.hpp  nlms.hpp  sliding_window.hpp
scripts/: build_and_run.sh
src/: CMakeLists.txt  aec.cpp  main.cpp  nlms.cpp
tests/: CMakeLists.txt
tests/unit/: aec_test.cpp
